# Vominal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: audiotest.cpp  main.cpp
src/audio/: OutputStream.cpp  OutputStream.hpp  Recorder.cpp  Recorder.hpp  SoundManager.cpp  SoundManager.hpp
src/primitives/: primitives.cpp  primitives.hpp
src/sockets/: SoundSocket.cpp  SoundSocket.hpp
src/ui/: SelectableStringList.cpp  SelectableStringList.hpp  layout.cpp  layout.hpp  ui.cpp  ui.hpp
src/window/: terminal_window.cpp  terminal_window.hpp
